feat(fuzz): standing hang/GC diagnostics — ts+upMs, GC logs, dump-on-hang JFR
If the GC-stall-misrecorded-as-hang class (round 21) or a true engine
spin ever recurs, the artifacts now settle it without a re-run:

- every failure record carries ts and upMs (uptime correlates with gc
  logs and exposes intra-chunk clustering directly)
- -PfuzzGcLog=true (soak passes it always): -Xlog:gc+safepoint into
  <outDir>/gc-<pid>.log per chunk JVM, rotated; note the ::filecount
  syntax (options segment after empty decorators segment)
- HANG records dump an in-process JFR recording (default settings,
  ~1%, -Dfuzz.jfr=false opts out) to hang-<caseSeed>.jfr — the
  sacrificed thread's method samples ship with the record

Smoke-tested via forced tiny watchdog: records carry
cpuMs/verdict/ts/upMs, dumps open with valid ExecutionSample events.
Gates green incl. rebar (226/0/2).